--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <li><a class="what" href="https://jvblack.github.io/trabalho-what-is/">What is</a></li>
                 <li><a class="counter" href="https://jvblack.github.io/trabalho-countermeasures/">Countermeasures</a></li>
-                <li><a class="datas" href="">Datas</a></li>
+                <li><a class="datas" href="https://jvblack.github.io/trabalho-data">Datas</a></li>
             </nav>
         </header>
     </div>
