--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
            <a href="https://www.gov.br/trabalho-e-previdencia/pt-br">Work Ministery</a>. With simple attitudes we can make the world
             much better
             </p>
+            <br>
+                 <br>
+                 <br>
+                 <br>
+                 <br>
+                 <br>
+                 <br>
+                 <br>
+
+                 <p class="fontes">fontes: https://www.ilo.org/brasilia/temas/trabalho-infantil/lang--pt/index.htm</p>
             
         </section>
     </div>
